test/fail/basic_syntax/else_without_if.lly
#[
SyntaxError: 'else' without 'if'.
    from else_without_if.lly:6:
]#

else
